tests/valid_input/stdin/emban/readint.java
class Main {
    static void run() {
        ifj16.print("program ukoncete pomoci ctrl+c\n")
        while(true) {
            ifj16.print("Zadejte cislo:\n");
            ifj16.print("Nactene cislo:\n" + readInt());
    }
}