tests/invalid_syn/syn11.java
class Main {
    static void run() {
        test = 5 > 6 && && true;
    }
}